# indexer-geyser-plugin

./: .gitignore  Cargo.toml  Dockerfile  README.MD  compose.yml  rust-toolchain.toml  start_rabbit.sh
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
ci/: cargo-build-test.sh  cargo-install-all.sh  create-tarball.sh  rust-version.sh  solana-version.sh
crates/plugin/: Cargo.toml  compose_config.json  local_config.json  sample_config.json  triton_config.json  triton_config_dev.json
crates/plugin/src/: config.rs  convert.rs  lib.rs  plugin.rs  selectors.rs  sender.rs  stats.rs
crates/rabbitmq/: Cargo.toml
crates/rabbitmq/src/: consumer.rs  geyser.rs  lib.rs  producer.rs  queue_type.rs  serialize.rs  suffix.rs
