[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "off"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version

[patch.crates-io]
solana-transaction-status = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-sdk = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-geyser-plugin-interface = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-logger = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-program = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-metrics = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
solana-zk-token-sdk = { git = 'https://github.com/step-finance/solana.git', rev = "de855b72d4e87fbf78bf68f8bd30b07be271fb8b" }
