[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "off"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version

[patch.crates-io]
solana-transaction-status = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-sdk = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-geyser-plugin-interface = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-logger = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-program = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-metrics = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }
solana-zk-token-sdk = { git = 'https://github.com/step-finance/solana.git', rev = "393145e2aaf54123c9b6a4ef78e92f9cdf610b3f" }

# solana-transaction-status = { path = "../solana/transaction-status" }
# solana-sdk = { path = "../solana/sdk" }
# solana-geyser-plugin-interface = { path = "../solana/geyser-plugin-interface" }
# solana-logger = { path = "../solana/logger" }
# solana-program = { path = "../solana/sdk/program" }
# solana-metrics = { path = "../solana/metrics" }
# solana-zk-token-sdk = { path = "../solana/zk-token-sdk" }
