[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.debug-lite]
inherits = "dev"
incremental = false
opt-level = 0
debug = 1
lto = "off"

[profile.release-lite]
inherits = "release"
opt-level = 2

[profile.debug-opt]
inherits = "release"
debug = 2
debug-assertions = true
incremental = true

[profile.docker]
inherits = "release"
# strip = "symbols" # Not supported in the workspace toolchain version

[patch.crates-io]
solana-transaction-status = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-sdk = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
agave-geyser-plugin-interface = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-logger = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-program = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-metrics = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-zk-token-sdk = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }

# solana-transaction-status = { path = "../agave/transaction-status" }
# solana-sdk = { path = "../agave/sdk" }
# agave-geyser-plugin-interface = { path = "../agave/geyser-plugin-interface" }
# solana-logger = { path = "../agave/logger" }
# solana-program = { path = "../agave/sdk/program" }
# solana-metrics = { path = "../agave/metrics" }
# solana-zk-token-sdk = { path = "../agave/zk-token-sdk" }
