[package]
name = "holaplex-indexer-rabbitmq-geyser"
version = "0.13.1"
authors = [
  "ryans <ryans@holaplex.com>",
  "Dana <dana@step.finance>",
]
edition = "2021"
description = "Solana Geyser plugin adapter for holaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq-geyser"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
bs58 = "0.4.0"
hashbrown = { version = "0.12.1", features = ["serde"] }
hostname = "0.3.1"
log = "0.4.14"
parking_lot = "0.12.0"
reqwest = "0.11.6"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
itertools = "0.10.4"
thiserror = "1.0.30"
veil = "0.1.6"
zstd = "0.12.3"

# solana-geyser-plugin-interface = { path = "../../../solana/geyser-plugin-interface" }
# solana-logger = { path = "../../../solana/logger" }
# solana-sdk = { path = "../../../solana/sdk" }
# solana-program = { path = "../../../solana/sdk/program" }
# solana-metrics = { path = "../../../solana/metrics" }
# solana-transaction-status = { path = "../../../solana/transaction-status" }

solana-geyser-plugin-interface = { version = "=1.18.21" }
solana-logger = { version = "=1.18.21" }
solana-sdk = { version = "=1.18.21" }
solana-program = { version = "=1.18.21" }
solana-metrics = { version = "=1.18.21" }
solana-transaction-status = { version = "=1.18.21" }
solana-zk-token-sdk ={ version = "=1.18.21" }

[dependencies.tokio]
version = "1.18.2"
features = [
  "fs",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
path = "../rabbitmq"
default-features = false
features = ["producer", "produce-json", "geyser"]
