[package]
name = "holaplex-indexer-rabbitmq-geyser"
version = "0.13.3"
authors = [
  "ryans <ryans@holaplex.com>",
  "Dana <dana@step.finance>",
]
edition = "2021"
description = "Solana Geyser plugin adapter for holaplex-indexer RabbitMQ transport"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq-geyser"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.52"
bs58 = "0.4.0"
hashbrown = { version = "0.12.1", features = ["serde"] }
hostname = "0.3.1"
log = "0.4.14"
parking_lot = "0.12.0"
reqwest = "0.11.6"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
itertools = "0.10.4"
thiserror = "1.0.30"
veil = "0.1.6"
zstd = "0.12.3"

# agave-geyser-plugin-interface = { path = "../../../agave/geyser-plugin-interface" }
# solana-logger = { path = "../../../agave/logger" }
# solana-sdk = { path = "../../../agave/sdk" }
# solana-program = { path = "../../../agave/sdk/program" }
# solana-metrics = { path = "../../../agave/metrics" }
# solana-transaction-status = { path = "../../../agave/transaction-status" }

agave-geyser-plugin-interface = { version = "=2.0.13" }
solana-logger = { version = "=2.0.13" }
solana-sdk = { version = "=2.0.13" }
solana-program = { version = "=2.0.13" }
solana-metrics = { version = "=2.0.13" }
solana-transaction-status = { version = "=2.0.13" }
solana-zk-token-sdk ={ version = "=2.0.13" }

[dependencies.tokio]
version = "1.18.2"
features = [
  "fs",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "sync",
  "time",
]

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
path = "../rabbitmq"
default-features = false
features = ["producer", "produce-json", "geyser"]
