[package]
name = "holaplex-indexer-rabbitmq"
version = "0.10.2"
authors = [
  "ryans <ryans@holaplex.com>",
  "Dana <dana@step.finance>",
]
edition = "2021"
description = "RabbitMQ transport components for holaplex-indexer"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
consumer = ["suffix"]
default = ["consumer"]
geyser = ["solana-program", "suffix"]
http-indexer = ["solana-program", "suffix"]
producer = ["suffix"]
search-indexer = ["solana-program", "suffix"]
suffix = ["clap"]
produce-json = []
consume-json = []

[dependencies]
clap = { version = "3.1.12", default-features = false, features = ["env", "std"], optional = true }
futures-util = "0.3.19"
lapin = "2.0.3"
log = "0.4.14"
rand = "0.8.5"
rmp-serde = "1.0.0-beta.2"
base64 = "0.13.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.79" }

# solana-transaction-status = { path = "../../../solana/transaction-status" }
# solana-geyser-plugin-interface = { path = "../../../solana/geyser-plugin-interface" }
# solana-program = { path = "../../../solana/sdk/program", optional = true }

solana-transaction-status = { version = "=1.16.26" }
solana-geyser-plugin-interface = { version = "=1.16.26" }
solana-program = { version = "=1.16.26", optional = true }

strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.30"
